# takopi

./: changelog.md  developing.md  pyproject.toml  readme.md  zensical.toml
codex_telegram_bridge/: pyproject.toml  readme.md
codex_telegram_bridge/src/codex_telegram_bridge/: __init__.py  exec_bridge.py  exec_render.py  mcp_bridge.py  rendering.py  telegram_client.py  tmux_notify.py  tmux_reply_bot.py
docs/: adding-a-runner.md  developing.md  specification.md
docs/reference/: commands-and-directives.md  config.md  plugins.md  specification.md
docs/runner/claude/: claude-takopi-events.md
docs/runner/pi/: pi-runner.md  (+1 more)
docs/transports/: telegram.md
notify_telegram/: notify_telegram.py  readme.md
src/takopi/: bridge.py  classifier.py  cli.py  config.py  exec_bridge.py  exec_render.py  lockfile.py  logging.py  onboarding.py  plugins.py  render.py  router.py  runner.py  runner_bridge.py  scheduler.py  settings.py  telegram.py
tests/: test_api_schemas.py  test_backends_helpers.py  test_cli_commands.py  test_cli_heartbeat.py  test_cli_helpers.py  test_cli_send.py  test_codex_runner_helpers.py  test_commands.py  test_config.py  test_config_migrations.py  test_engines.py  test_events.py  test_exec_bridge.py  test_exec_render.py  test_heartbeat_executor.py  test_heartbeat_notify.py  test_heartbeat_state.py  test_onboarding.py  test_onboarding_interactive.py  test_paths.py  test_pi_runner.py  test_settings_contract.py  test_subprocess.py  test_telegram_bridge.py  test_telegram_client.py  test_telegram_files.py  test_telegram_queue.py  test_worktrees.py
(+21 files in other folders)
