[project]
name = "codex-telegram-bridge"
version = "0.1.0"
description = "Telegram bridge tools for Codex."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "markdown-it-py",
  "sulguk",
  "tomli; python_version < '3.11'",
]

[project.scripts]
codex-telegram-exec-bridge = "codex_telegram_bridge.exec_bridge:main"
codex-telegram-mcp-bridge = "codex_telegram_bridge.mcp_bridge:main"
codex-telegram-tmux-notify = "codex_telegram_bridge.tmux_notify:main"
codex-telegram-tmux-reply = "codex_telegram_bridge.tmux_reply_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_telegram_bridge"]

[tool.hatch.build.targets.sdist]
include = ["src/codex_telegram_bridge", "readme.md"]
